Styling: fix nav spacing and sidebar-wrapper

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,6 +1,6 @@
 .navigation {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   list-style: none;
   padding: 0;
   margin: 0;
